5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4126/executions/1585_842.log
== TEST (2019-03-26 11:30:24) 
-- CODE:
int(input(1234))
print(1+2+3+4)
-- OUTPUT:
123410
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:31:29) 
-- CODE:
int(input(numero'abcd'))
print()
-- ERROR:
File "XXXX", line 1
    int(input(numero'abcd'))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:39:14) 
-- CODE:
valor = input(" quatro digitos ")
valor//1000
print(valor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor//1000
TypeError: unsupported operand type(s) for //: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:39:28) 
-- CODE:
valor = input(" quatro digitos ")
valor//1000
print(valor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor//1000
TypeError: unsupported operand type(s) for //: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:40:16) 
-- CODE:
valor = int(input(" quatro digitos ")
a = valor//1000
print(valor)
-- ERROR:
File "XXXX", line 2
    a = valor//1000
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:40:32) 
-- CODE:
valor = int(input(" quatro digitos ")
a=valor//1000
print(valor)
-- ERROR:
File "XXXX", line 2
    a=valor//1000
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:40:52) 
-- CODE:
valor = int(input(" quatro digitos ")

a=valor//1000

print(valor)
-- ERROR:
File "XXXX", line 3
    a=valor//1000
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:41:06) 
-- CODE:
valor=int(input(" quatro digitos ")

a=valor//1000

print(valor)
-- ERROR:
File "XXXX", line 3
    a=valor//1000
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:14:17) 
-- CODE:
n = int(input(" quatro digitos "))

x1 = n//1000
x2 = n//100 - (n//1000)*10
x3 = n//10 - (n//100)*10
x4 = n/1 - (n//10)*10
baiano = x1 + x2 + x3 + x4
print(baiano)


-- OUTPUT:
20.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:14:34) 
-- CODE:
n = int(input(" quatro digitos "))

x1 = n//1000
x2 = n//100 - (n//1000)*10
x3 = n//10 - (n//100)*10
x4 = n/1 - (n//10)*10
baiano = x1 + x2 + x3 + x4
print(baiano)


-- EXECUTION TIME:
0.159194
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
20.0
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
